2009-11-24  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Remove left-over debugging code in FormatNumber (reported by Dave Hanks)
	* pkgIndex.tcl: Changed version to 1.8.1

2009-11-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added interactive commands bindplot and bindlast
	* plotbind.tcl: Preliminary implementation of the bindplot and bindlast commands
	* pkgIndex.tcl: Changed version to 1.8.0

2009-11-17  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added log X and log-log plots (patch by Paul Vogel)
	* plotaxis.tcl: Added support for log X and log-log plots (patch by Paul Vogel)
	                Corrected drawing of axis labels (patch by Paul Vogel)
	* plotconfig.tcl: Support for log X and log-log plots (patch by Paul Vogel)
	* plotpriv.tcl: Support for log X and log-log plots (patch by Paul Vogel)
	* plotchart.man: Documentation of log-X and log-log plots
	* pkgIndex.tcl: Changed version to 1.7.1

2009-10-18  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added wind rose diagrams, added new methods
	* plotpriv.tcl: Drawing methods for wind rose diagrams
	* plotpriv.tcl: Drawing bands and label-dots
	* plotaxis.tcl: Drawing axes for wind rose diagrams
	* plotchart.man: Documentation of new diagram and new methods
	* pkgIndex.tcl: Changed version to 1.7.0

2009-08-31  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Corrected version number (1.6.3)

2009-07-14  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Added support for formats like %x to label the axes

2009-03-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Solved issue 2683544 (font size leading to clipped labels)
	* plotpriv.tcl: Ditto
	* plotaxis.tcl: Ditto
	* plotconfig.tcl: Ditto
	* pkgIndex.tcl: Bumped version number to 1.6.3

2009-03-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>